refactor: Rework Device Modbus docs into new 3.1 structure
Signed-off-by: melody <melody@iotechsys.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -171,7 +171,15 @@ nav:
               - Protocol Properties: microservices/device/services/device-gpio/ProtocolProperties.md
               - API Reference: microservices/device/services/device-gpio/ApiReference.md
               - Source Code: microservices/device/services/device-gpio/SourceCode.md
-          - Device ModBus: microservices/device/services/device-modbus.md
+          - Device Modbus: 
+              - Purpose: microservices/device/services/device-modbus/Purpose.md
+              - Getting Started: microservices/device/services/device-modbus/GettingStarted.md
+              - Configuration: microservices/device/services/device-modbus/Configuration.md
+              - Protocol Properties: microservices/device/services/device-modbus/ProtocolProperties.md
+              - API Reference: microservices/device/services/device-modbus/APIReference.md
+              - Source Code: microservices/device/services/device-modbus/SourceCode.md
+              - Additional Details:
+                - Data Type Conversion: microservices/device/services/device-modbus/details/DataTypeConversion.md             
           - Device MQTT:
             - Purpose: microservices/device/services/device-mqtt/Purpose.md
             - Getting Started: microservices/device/services/device-mqtt/GettingStarted.md
@@ -343,9 +351,7 @@ nav:
       - examples/Ch-ExamplesVirtualDeviceService.md
       - examples/Ch-ExamplesSendingAndConsumingBinary.md
       - examples/Ch-CommandingDeviceThroughRulesEngine.md
-      - examples/Ch-ExamplesModbusdatatypeconversion.md
       - Adding a Device:
-        - examples/Ch-ExamplesAddingModbusDevice.md
         - examples/Ch-ExamplesAddingSNMPDevice.md
         - microservices/device/services/device-mqtt/Ch-ExamplesAddingMQTTDevice.md
       - Walkthrough:
