feat: Add docs for Device MQTT
Closes #1281

Signed-off-by: Elizabeth J Lee <elizabeth.j.lee@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -166,7 +166,14 @@ nav:
           - Device COAP: microservices/device/services/device-coap.md
           - Device GPIO: microservices/device/services/device-gpio.md
           - Device ModBus: microservices/device/services/device-modbus.md
-          - Device MQTT: microservices/device/services/device-mqtt.md
+          - Device MQTT:
+            - Purpose: microservices/device/services/device-mqtt/Purpose.md
+            - Getting Started: microservices/device/services/device-mqtt/GettingStarted.md
+            - How To Guides:
+                - How To Add an MQTT Device: microservices/device/services/device-mqtt/Ch-ExamplesAddingMQTTDevice.md
+            - Configuration: microservices/device/services/device-mqtt/Configuration.md
+            - API Reference: microservices/device/services/device-mqtt/ApiReference.md
+            - Source Code: microservices/device/services/device-mqtt/SourceCode.md
           - Device Onvif Camera:
               - microservices/device/services/device-onvif-camera/General.md
               - microservices/device/services/device-onvif-camera/swagger.md
