fix: address pr feedback, add multi-level topic info
Signed-off-by: Elizabeth J Lee <elizabeth.j.lee@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -172,8 +172,10 @@ nav:
             - How To Guides:
                 - How To Add an MQTT Device: microservices/device/services/device-mqtt/Ch-ExamplesAddingMQTTDevice.md
             - Configuration: microservices/device/services/device-mqtt/Configuration.md
-            - API Reference: microservices/device/services/device-mqtt/ApiReference.md
+            - API Reference: microservices/device/services/device-mqtt/APIReference.md
             - Source Code: microservices/device/services/device-mqtt/SourceCode.md
+            - Additional Details:
+                - Multi-Level Topics: microservices/device/services/device-mqtt/details/MultiLevelTopics.md
           - Device Onvif Camera:
               - microservices/device/services/device-onvif-camera/General.md
               - microservices/device/services/device-onvif-camera/swagger.md
@@ -324,7 +326,7 @@ nav:
       - Adding a Device:
         - examples/Ch-ExamplesAddingModbusDevice.md
         - examples/Ch-ExamplesAddingSNMPDevice.md
-        - examples/Ch-ExamplesAddingMQTTDevice.md
+        - microservices/device/services/device-mqtt/Ch-ExamplesAddingMQTTDevice.md
       - Walkthrough:
         - walk-through/Ch-Walkthrough.md
         - walk-through/Ch-WalkthroughSetup.md
