--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -166,7 +166,16 @@ nav:
           - Device COAP: microservices/device/services/device-coap.md
           - Device GPIO: microservices/device/services/device-gpio.md
           - Device ModBus: microservices/device/services/device-modbus.md
-          - Device MQTT: microservices/device/services/device-mqtt.md
+          - Device MQTT:
+            - Purpose: microservices/device/services/device-mqtt/Purpose.md
+            - Getting Started: microservices/device/services/device-mqtt/GettingStarted.md
+            - How To Guides:
+                - How To Add an MQTT Device: microservices/device/services/device-mqtt/Ch-ExamplesAddingMQTTDevice.md
+            - Configuration: microservices/device/services/device-mqtt/Configuration.md
+            - API Reference: microservices/device/services/device-mqtt/APIReference.md
+            - Source Code: microservices/device/services/device-mqtt/SourceCode.md
+            - Additional Details:
+                - Multi-Level Topics: microservices/device/services/device-mqtt/details/MultiLevelTopics.md
           - Device Onvif Camera:
               - microservices/device/services/device-onvif-camera/General.md
               - microservices/device/services/device-onvif-camera/swagger.md
@@ -324,7 +333,7 @@ nav:
       - Adding a Device:
         - examples/Ch-ExamplesAddingModbusDevice.md
         - examples/Ch-ExamplesAddingSNMPDevice.md
-        - examples/Ch-ExamplesAddingMQTTDevice.md
+        - microservices/device/services/device-mqtt/Ch-ExamplesAddingMQTTDevice.md
       - Walkthrough:
         - walk-through/Ch-Walkthrough.md
         - walk-through/Ch-WalkthroughSetup.md
