feat: Add device UART docs, fix link in device mqtt
Closes #1286

Signed-off-by: Elizabeth J Lee <elizabeth.j.lee@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -217,7 +217,12 @@ nav:
               - Source Code: microservices/device/services/device-rest/SourceCode.md
           - Device RFID LLRP: microservices/device/services/device-rfid-llrp.md
           - Device SNMP: microservices/device/services/device-snmp.md
-          - Device UART: microservices/device/services/device-uart.md
+          - Device UART:
+              - Purpose: microservices/device/services/device-uart/Purpose.md
+              - Getting Started: microservices/device/services/device-uart/GettingStarted.md
+              - Configuration: microservices/device/services/device-uart/Configuration.md
+              - API Reference: microservices/device/services/device-uart/APIReference.md
+              - Source Code: microservices/device/services/device-uart/SourceCode.md
           - Device USB Camera:
               - microservices/device/services/device-usb-camera/General.md
               - Walkthrough:
