refactor: Rework Device GPIO docs into new 3.1 structure
closes #1285

Signed-off-by: Leonard Goodell <leonard.goodell@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -164,7 +164,13 @@ nav:
         - Services:
           - Device BacNet: microservices/device/services/device-bacnet.md
           - Device COAP: microservices/device/services/device-coap.md
-          - Device GPIO: microservices/device/services/device-gpio.md
+          - Device GPIO:
+              - Purpose: microservices/device/services/device-gpio/Purpose.md
+              - Getting Started: microservices/device/services/device-gpio/GettingStarted.md
+              - Configuration: microservices/device/services/device-gpio/Configuration.md
+              - Protocol Properties: microservices/device/services/device-gpio/ProtocolProperties.md
+              - API Reference: microservices/device/services/device-gpio/ApiReference.md
+              - Source Code: microservices/device/services/device-gpio/SourceCode.md
           - Device ModBus: microservices/device/services/device-modbus.md
           - Device MQTT:
             - Purpose: microservices/device/services/device-mqtt/Purpose.md
