feat: Document Device REST's Protocol Properties
Signed-off-by: Leonard Goodell <leonard.goodell@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -213,6 +213,7 @@ nav:
               - How-To Guides:
                   - Testing: microservices/device/services/device-rest/howto/Testing.md
               - Configuration: microservices/device/services/device-rest/Configuration.md
+              - Protocol Properties: microservices/device/services/device-rest/ProtocolProperties.md
               - API Reference: microservices/device/services/device-rest/ApiReference.md
               - Source Code: microservices/device/services/device-rest/SourceCode.md
           - Device RFID LLRP: microservices/device/services/device-rfid-llrp.md
