feat: Document Device MQTT protocol properties
Signed-off-by: Elizabeth J Lee <elizabeth.j.lee@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -178,6 +178,7 @@ nav:
             - How To Guides:
                 - How To Add an MQTT Device: microservices/device/services/device-mqtt/Ch-ExamplesAddingMQTTDevice.md
             - Configuration: microservices/device/services/device-mqtt/Configuration.md
+            - Protocol Properties: microservices/device/services/device-mqtt/ProtocolProperties.md
             - API Reference: microservices/device/services/device-mqtt/APIReference.md
             - Source Code: microservices/device/services/device-mqtt/SourceCode.md
             - Additional Details:
