feat: Document Device UART Protocol Properties
Signed-off-by: Elizabeth J Lee <elizabeth.j.lee@intel.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -228,6 +228,7 @@ nav:
               - Purpose: microservices/device/services/device-uart/Purpose.md
               - Getting Started: microservices/device/services/device-uart/GettingStarted.md
               - Configuration: microservices/device/services/device-uart/Configuration.md
+              - Protocol Properties: microservices/device/services/device-uart/ProtocolProperties.md
               - API Reference: microservices/device/services/device-uart/APIReference.md
               - Source Code: microservices/device/services/device-uart/SourceCode.md
           - Device USB Camera:
