fix: local render issue
Signed-off-by: melody <melody@iotechsys.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,8 +59,7 @@ nav:
             - getting-started/native/Ch-BuildRunOnArm32.md
             - getting-started/native/Ch-BuildRunOnWindows.md
         - Application Functions SDK: microservices/application/sdk/Purpose.md
-        - Device Services:
-            - microservices/device/GettingStarted.md
+        - Device Services: microservices/device/GettingStarted.md
         - getting-started/Ch-GettingStartedUsersNexus.md
         - getting-started/Ch-GettingStartedDTOValidation.md
     - APIs:
