feat: Add API documents for Core Keeper and Support Cron Scheduler
Signed-off-by: Cherry Wang <cherry@iotechsys.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,9 +68,11 @@ nav:
         - api/core/Ch-APICoreCommand.md
         - Core Data: microservices/core/data/ApiReference.md
         - api/core/Ch-APICoreMetadata.md
+        - api/core/Ch-APICoreKeeper.md
         - api/core/Ch-APICoreConfigurationAndRegistry.md
         - api/support/Ch-APISupportNotifications.md
         - api/support/Ch-APISupportScheduler.md
+        - api/support/Ch-APISupportCronScheduler.md
         - api/devices/Ch-APIDeviceSDK.md
         - App Services: microservices/application/ApiReference.md
         - api/applications/Ch-APIRulesEngine.md
