feat: add support-cron-scheduler documentation
closes #1368

Signed-off-by: Jack Chen <jack@iotechsys.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -124,6 +124,12 @@ nav:
             - Configuration: microservices/support/scheduler/Configuration.md
             - API Reference: microservices/support/scheduler/ApiReference.md
             - Source Code: microservices/support/scheduler/SourceCode.md
+        - Cron Scheduler:
+            - Purpose: microservices/support/cronScheduler/Purpose.md
+            - Getting Started: microservices/support/cronScheduler/GettingStarted.md
+            - Configuration: microservices/support/cronScheduler/Configuration.md
+            - API Reference: microservices/support/cronScheduler/ApiReference.md
+            - Source Code: microservices/support/cronScheduler/SourceCode.md
         - microservices/support/eKuiper/Ch-eKuiper.md
       - Device:
         - Device Service: microservices/device/DeviceService.md
