feat: Add Device Service System Events docs and update SDK APIs
also fix some broken links

Signed-off-by: Ginny Guan <ginny@iotechsys.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -152,6 +152,7 @@ nav:
             - Service Metrics: microservices/device/details/ServiceMetrics.md
         - Device Service SDK:
             - Purpose: microservices/device/sdk/Purpose.md
+            - Device System Events: microservices/device/sdk/DeviceSystemEvents.md
             - Getting Started:
                 - Go SDK: microservices/device/sdk/devicesdk-getting-started/GettingStartedSDK-Go.md
                 - C SDK: microservices/device/sdk/devicesdk-getting-started/GettingStartedSDK-C.md
