feat: Add docs for PostgreSQL db usage in EdgeX
Resolves #1375. Add docs for PostgreSQL db usage in EdgeX.

Signed-off-by: Lindsey Cheng <beckysocute@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -105,7 +105,6 @@ nav:
             - Source Code: microservices/core/command/SourceCode.md
             - Additional Details:
               - Regex Get Command: microservices/core/command/details/RegexGetCommand.md
-        - microservices/core/database/Ch-Redis.md
       - Supporting: 
         - microservices/support/Ch-SupportingServices.md
         - Notifications:
@@ -328,6 +327,9 @@ nav:
         - V3 Migration: microservices/configuration/V3MigrationCommonConfig.md
       - microservices/general/index.md
       - microservices/general/messagebus.md
+      - Database:
+        - microservices/general/database/Ch-Redis.md
+        - microservices/general/database/Ch-Postgres.md
     - Security:
       - Security Services: security/Ch-Security.md
       - security/Ch-SecretStore.md
