feat: Add support-cron-scheduler retention docs
refer to https://github.com/edgexfoundry/edgex-go/issues/4912

Signed-off-by: Jack Chen <jack@iotechsys.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -129,6 +129,8 @@ nav:
             - Configuration: microservices/support/cronScheduler/Configuration.md
             - API Reference: microservices/support/cronScheduler/ApiReference.md
             - Source Code: microservices/support/cronScheduler/SourceCode.md
+            - Additional Details:
+                - Data Retention: microservices/support/cronScheduler/details/DataRetention.md
         - microservices/support/eKuiper/Ch-eKuiper.md
       - Device:
         - Device Service: microservices/device/DeviceService.md
