--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,7 +66,7 @@ nav:
     - APIs:
         - api/Ch-APIIntroduction.md
         - api/core/Ch-APICoreCommand.md
-        - Core Data: microservices/core/data/ApiReference.md
+        - api/core/Ch-APICoredata.md
         - api/core/Ch-APICoreMetadata.md
         - api/core/Ch-APICoreKeeper.md
         - api/core/Ch-APICoreConfigurationAndRegistry.md
