fix: address request changes
Signed-off-by: melody <melody@iotechsys.com>

--- a/template_macros.yaml
+++ b/template_macros.yaml
@@ -9,7 +9,7 @@
 #
 # Examples: main, v3.0, v3.1
 edgexversion: main
-
+config_version: v4 
 # api_version is the major API version
 #
 # Examples: v2, v3
