--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -323,7 +323,7 @@ nav:
       - microservices/general/index.md
       - microservices/general/messagebus.md
       - Database:
-        - microservices/general/database/Ch-Redis.md
+        # - microservices/general/database/Ch-Redis.md
         - microservices/general/database/Ch-Postgres.md
     - Security:
       - Security Services: security/Ch-Security.md
