feat: Add doc for obtaining Postgres superuser pw
Relates to #1410. Add doc for obtaining Postgres superuser password via secret store.

Signed-off-by: Lindsey Cheng <beckysocute@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -332,6 +332,7 @@ nav:
       - security/Ch-SecretProviderApi.md
       - security/Ch-APIGateway.md
       - security/Ch-Secure-MessageBus.md
+      - security/Ch-Secure-Postgres.md
       - security/Ch-Configuring-Add-On-Services.md
       - security/Ch-Secure-Consul.md
       - security/Ch-SecurityIssues.md
