feat: Add doc for secretstore-setup regen token feature
Fixes #1425. Add doc for secretstore-setup regen token feature.

Signed-off-by: Lindsey Cheng <beckysocute@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -337,6 +337,7 @@ nav:
     - Security:
       - Security Services: security/Ch-Security.md
       - security/Ch-SecretStore.md
+      - security/Ch-SecretStoreSetup.md
       - security/Ch-Authenticating.md
       - security/Ch-SecretProviderApi.md
       - security/Ch-APIGateway.md
