feat: add app-functions-sdk-python documentation
We have publish the new app-functions-sdk-python, so adding
corresponding documentation.

Signed-off-by: Jude Hung <jude@iotechsys.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,7 +58,8 @@ nav:
             - getting-started/native/Ch-BuildRunOnLinuxDistro.md
             - getting-started/native/Ch-BuildRunOnArm32.md
             - getting-started/native/Ch-BuildRunOnWindows.md
-        - Application Functions SDK: microservices/application/sdk/Purpose.md
+        - Application Functions SDK - Go: microservices/application/sdk/Purpose.md
+        - Application Functions SDK - Python: microservices/application/sdk-python/Purpose.md
         - Device Services:
             - microservices/device/GettingStarted.md
         - getting-started/Ch-GettingStartedUsersNexus.md
@@ -275,7 +276,7 @@ nav:
             - Seeding Secrets: microservices/application/details/SeedingSecrets.md
             - Service Metrics: microservices/application/details/ServiceMetrics.md
             - Triggers: microservices/application/details/Triggers.md
-        - App Functions SDK:
+        - App Functions SDK - Go:
             - Purpose: microservices/application/sdk/Purpose.md
             - Getting Started: microservices/application/sdk/GettingStarted.md
             - APIs:
@@ -292,6 +293,23 @@ nav:
                 - Secrets: microservices/application/sdk/details/Secrets.md
                 - Store and Forward: microservices/application/sdk/details/StoreAndForward.md
                 - Target Type: microservices/application/sdk/details/TargetType.md
+        - App Functions SDK - Python:
+            - Purpose: microservices/application/sdk-python/Purpose.md
+            - Getting Started: microservices/application/sdk-python/GettingStarted.md
+            - APIs:
+                - Application Service: microservices/application/sdk-python/api/ApplicationServiceAPI.md
+                - App Function Context: microservices/application/sdk-python/api/AppFunctionContextAPI.md
+                - Pipeline Functions: microservices/application/sdk-python/api/BuiltInPipelineFunctions.md
+            - Source Code: microservices/application/sdk-python/SourceCode.md
+            - Additional Details:
+                - Custom Configuration: microservices/application/sdk-python/details/CustomConfiguration.md
+                - Custom REST APIs: microservices/application/sdk-python/details/CustomRestApis.md
+                - Custom Service Metrics: microservices/application/sdk-python/details/CustomServiceMetrics.md
+                - Error Handling: microservices/application/sdk-python/details/ErrorHandling.md
+                - Pipelines Per Topic: microservices/application/sdk-python/details/PipelinesPerTopics.md
+                #- Secrets: microservices/application/sdk-python/details/Secrets.md
+                - Store and Forward: microservices/application/sdk-python/details/StoreAndForward.md
+                - Target Type: microservices/application/sdk-python/details/TargetType.md
         - V3 Migration: microservices/application/V3Migration.md
         - Services:
             - App Service Configurable:
